--- a/xinyu.ipynb
+++ b/xinyu.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -57,36 +57,57 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 8006 entries, 0 to 8005\n",
-      "Data columns (total 19 columns):\n",
-      " #   Column               Non-Null Count  Dtype         \n",
-      "---  ------               --------------  -----         \n",
-      " 0   ID                   8006 non-null   int64         \n",
-      " 1   CustomerID           8006 non-null   int64         \n",
-      " 2   Nationality          8006 non-null   object        \n",
-      " 3   SASNationality       8006 non-null   object        \n",
-      " 4   Name                 8006 non-null   object        \n",
-      " 5   FamilyName           8006 non-null   object        \n",
-      " 6   EducationLevel       8006 non-null   object        \n",
-      " 7   Gender               8006 non-null   object        \n",
-      " 8   BirthDate            8006 non-null   datetime64[ns]\n",
-      " 9   MaritalStatus        8006 non-null   object        \n",
-      " 10  NoOfDependents       8006 non-null   int64         \n",
-      " 11  MobileContact        8006 non-null   int64         \n",
-      " 12  HomeContact          8006 non-null   int64         \n",
-      " 13  EmailAddress         8006 non-null   object        \n",
-      " 14  ResidentialType      8005 non-null   object        \n",
-      " 15  ResidentialAddress1  8006 non-null   object        \n",
-      " 16  ResidentialAddress2  7623 non-null   object        \n",
-      " 17  PostalCode           8006 non-null   int64         \n",
-      " 18  CarOwner             8006 non-null   object        \n",
-      "dtypes: datetime64[ns](1), int64(6), object(12)\n",
-      "memory usage: 1.2+ MB\n"
+      "RangeIndex: 2460 entries, 0 to 2459\n",
+      "Columns: 120 entries, Internal ID to Click Coordinates (x, y)\n",
+      "dtypes: float64(4), int64(1), object(115)\n",
+      "memory usage: 2.3+ MB\n"
      ]
     }
    ],
    "source": [
-    "df.info()"
+    "candy=pd.read_csv('candyhierarchy2017 (1).csv', encoding=\"ISO-8859-1\")\n",
+    "candy.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 2460 entries, 0 to 2459\n",
+      "Columns: 120 entries, Internal ID to Click Coordinates (x, y)\n",
+      "dtypes: float64(4), int64(1), object(115)\n",
+      "memory usage: 2.3+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "candy.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "84"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "candy['Q3: AGE'].isnull().sum()"
    ]
   },
   {
@@ -315,6 +336,238 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting pywhatkit\n",
+      "  Downloading pywhatkit-5.4-py3-none-any.whl.metadata (5.5 kB)\n",
+      "Requirement already satisfied: Pillow in /opt/anaconda3/lib/python3.11/site-packages (from pywhatkit) (10.4.0)\n",
+      "Collecting pyautogui (from pywhatkit)\n",
+      "  Downloading PyAutoGUI-0.9.54.tar.gz (61 kB)\n",
+      "  Installing build dependencies ... \u001b[?25ldone\n",
+      "\u001b[?25h  Getting requirements to build wheel ... \u001b[?25ldone\n",
+      "\u001b[?25h  Preparing metadata (pyproject.toml) ... \u001b[?25ldone\n",
+      "\u001b[?25hRequirement already satisfied: requests in /opt/anaconda3/lib/python3.11/site-packages (from pywhatkit) (2.32.3)\n",
+      "Collecting wikipedia (from pywhatkit)\n",
+      "  Downloading wikipedia-1.4.0.tar.gz (27 kB)\n",
+      "  Preparing metadata (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25hRequirement already satisfied: Flask in /opt/anaconda3/lib/python3.11/site-packages (from pywhatkit) (3.0.3)\n",
+      "Requirement already satisfied: Werkzeug>=3.0.0 in /opt/anaconda3/lib/python3.11/site-packages (from Flask->pywhatkit) (3.0.3)\n",
+      "Requirement already satisfied: Jinja2>=3.1.2 in /opt/anaconda3/lib/python3.11/site-packages (from Flask->pywhatkit) (3.1.4)\n",
+      "Requirement already satisfied: itsdangerous>=2.1.2 in /opt/anaconda3/lib/python3.11/site-packages (from Flask->pywhatkit) (2.2.0)\n",
+      "Requirement already satisfied: click>=8.1.3 in /opt/anaconda3/lib/python3.11/site-packages (from Flask->pywhatkit) (8.1.7)\n",
+      "Requirement already satisfied: blinker>=1.6.2 in /opt/anaconda3/lib/python3.11/site-packages (from Flask->pywhatkit) (1.6.2)\n",
+      "Requirement already satisfied: pyobjc-core in /opt/anaconda3/lib/python3.11/site-packages (from pyautogui->pywhatkit) (10.1)\n",
+      "Collecting pyobjc-framework-quartz (from pyautogui->pywhatkit)\n",
+      "  Downloading pyobjc_framework_Quartz-10.3.2-cp311-cp311-macosx_10_9_universal2.whl.metadata (3.3 kB)\n",
+      "Collecting pymsgbox (from pyautogui->pywhatkit)\n",
+      "  Downloading PyMsgBox-1.0.9.tar.gz (18 kB)\n",
+      "  Installing build dependencies ... \u001b[?25ldone\n",
+      "\u001b[?25h  Getting requirements to build wheel ... \u001b[?25ldone\n",
+      "\u001b[?25h  Preparing metadata (pyproject.toml) ... \u001b[?25ldone\n",
+      "\u001b[?25hCollecting pytweening>=1.0.4 (from pyautogui->pywhatkit)\n",
+      "  Downloading pytweening-1.2.0.tar.gz (171 kB)\n",
+      "  Preparing metadata (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25hCollecting pyscreeze>=0.1.21 (from pyautogui->pywhatkit)\n",
+      "  Downloading pyscreeze-1.0.1.tar.gz (27 kB)\n",
+      "  Installing build dependencies ... \u001b[?25ldone\n",
+      "\u001b[?25h  Getting requirements to build wheel ... \u001b[?25ldone\n",
+      "\u001b[?25h  Preparing metadata (pyproject.toml) ... \u001b[?25ldone\n",
+      "\u001b[?25hCollecting pygetwindow>=0.0.5 (from pyautogui->pywhatkit)\n",
+      "  Downloading PyGetWindow-0.0.9.tar.gz (9.7 kB)\n",
+      "  Preparing metadata (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25hCollecting mouseinfo (from pyautogui->pywhatkit)\n",
+      "  Downloading MouseInfo-0.1.3.tar.gz (10 kB)\n",
+      "  Preparing metadata (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25hRequirement already satisfied: charset-normalizer<4,>=2 in /opt/anaconda3/lib/python3.11/site-packages (from requests->pywhatkit) (3.3.2)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /opt/anaconda3/lib/python3.11/site-packages (from requests->pywhatkit) (3.7)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in /opt/anaconda3/lib/python3.11/site-packages (from requests->pywhatkit) (2.2.3)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /opt/anaconda3/lib/python3.11/site-packages (from requests->pywhatkit) (2024.8.30)\n",
+      "Requirement already satisfied: beautifulsoup4 in /opt/anaconda3/lib/python3.11/site-packages (from wikipedia->pywhatkit) (4.12.3)\n",
+      "Requirement already satisfied: MarkupSafe>=2.0 in /opt/anaconda3/lib/python3.11/site-packages (from Jinja2>=3.1.2->Flask->pywhatkit) (2.1.3)\n",
+      "Collecting pyrect (from pygetwindow>=0.0.5->pyautogui->pywhatkit)\n",
+      "  Downloading PyRect-0.2.0.tar.gz (17 kB)\n",
+      "  Preparing metadata (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25hRequirement already satisfied: soupsieve>1.2 in /opt/anaconda3/lib/python3.11/site-packages (from beautifulsoup4->wikipedia->pywhatkit) (2.5)\n",
+      "Collecting rubicon-objc (from mouseinfo->pyautogui->pywhatkit)\n",
+      "  Downloading rubicon_objc-0.4.9-py3-none-any.whl.metadata (5.9 kB)\n",
+      "Collecting pyperclip (from mouseinfo->pyautogui->pywhatkit)\n",
+      "  Downloading pyperclip-1.9.0.tar.gz (20 kB)\n",
+      "  Preparing metadata (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25hCollecting pyobjc-core (from pyautogui->pywhatkit)\n",
+      "  Downloading pyobjc_core-10.3.2-cp311-cp311-macosx_10_9_universal2.whl.metadata (2.5 kB)\n",
+      "Collecting pyobjc-framework-Cocoa>=10.3.2 (from pyobjc-framework-quartz->pyautogui->pywhatkit)\n",
+      "  Downloading pyobjc_framework_Cocoa-10.3.2-cp311-cp311-macosx_10_9_universal2.whl.metadata (2.3 kB)\n",
+      "Downloading pywhatkit-5.4-py3-none-any.whl (15 kB)\n",
+      "Downloading pyobjc_framework_Quartz-10.3.2-cp311-cp311-macosx_10_9_universal2.whl (209 kB)\n",
+      "Downloading pyobjc_core-10.3.2-cp311-cp311-macosx_10_9_universal2.whl (775 kB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m775.5/775.5 kB\u001b[0m \u001b[31m31.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hDownloading pyobjc_framework_Cocoa-10.3.2-cp311-cp311-macosx_10_9_universal2.whl (381 kB)\n",
+      "Downloading rubicon_objc-0.4.9-py3-none-any.whl (63 kB)\n",
+      "Building wheels for collected packages: pyautogui, wikipedia, pygetwindow, pyscreeze, pytweening, mouseinfo, pymsgbox, pyperclip, pyrect\n",
+      "  Building wheel for pyautogui (pyproject.toml) ... \u001b[?25ldone\n",
+      "\u001b[?25h  Created wheel for pyautogui: filename=PyAutoGUI-0.9.54-py3-none-any.whl size=37574 sha256=644b4cb2f8c0470a4e61660d63f7097959711484d46c1c1e4ddba2989cf53be0\n",
+      "  Stored in directory: /Users/wong/Library/Caches/pip/wheels/95/dc/b1/fe122b791e0db8bf439a0e6e1d2628e48f10bf430cae13521b\n",
+      "  Building wheel for wikipedia (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25h  Created wheel for wikipedia: filename=wikipedia-1.4.0-py3-none-any.whl size=11679 sha256=f951f60be369e6ec58376dd54eeb6b26a4d2cc1009bed4f12e9d17fdc8a1415b\n",
+      "  Stored in directory: /Users/wong/Library/Caches/pip/wheels/8f/ab/cb/45ccc40522d3a1c41e1d2ad53b8f33a62f394011ec38cd71c6\n",
+      "  Building wheel for pygetwindow (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25h  Created wheel for pygetwindow: filename=PyGetWindow-0.0.9-py3-none-any.whl size=11063 sha256=a99d63629bdc677254e9a795f13edf7a76ff3c59d41e02af9fcfb622a7ee0d11\n",
+      "  Stored in directory: /Users/wong/Library/Caches/pip/wheels/07/75/0b/7ca0b598eb4c21d43ba4bcc78a0538dfcf803a5997da33bc19\n",
+      "  Building wheel for pyscreeze (pyproject.toml) ... \u001b[?25ldone\n",
+      "\u001b[?25h  Created wheel for pyscreeze: filename=PyScreeze-1.0.1-py3-none-any.whl size=14363 sha256=46e08a7749c34404b8ffc9f1ccfb74dacf939c410875bbb7f4a2a0e01642f75c\n",
+      "  Stored in directory: /Users/wong/Library/Caches/pip/wheels/cd/e3/dd/267b393d8e8f607e47194942740d080d9bfd835cd4375a3de1\n",
+      "  Building wheel for pytweening (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25h  Created wheel for pytweening: filename=pytweening-1.2.0-py3-none-any.whl size=8010 sha256=06a13bd006ab2b769e14387934c34111d6482202e6a741f4128e30592c0ac08d\n",
+      "  Stored in directory: /Users/wong/Library/Caches/pip/wheels/db/81/dc/0d61a3c9614f288e057ab63924e2a49edbeed4ffc916dcda1e\n",
+      "  Building wheel for mouseinfo (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25h  Created wheel for mouseinfo: filename=MouseInfo-0.1.3-py3-none-any.whl size=10889 sha256=49153b1025edb9b298c16812ad7597d13e888e4df6c4f2849b2b50b7f66f7c89\n",
+      "  Stored in directory: /Users/wong/Library/Caches/pip/wheels/20/0b/7f/939ac9ff785b09951c706150537572c00123412f260a6024f3\n",
+      "  Building wheel for pymsgbox (pyproject.toml) ... \u001b[?25ldone\n",
+      "\u001b[?25h  Created wheel for pymsgbox: filename=PyMsgBox-1.0.9-py3-none-any.whl size=7406 sha256=e322cb0297a43041729a08ba7281745b4016159c8dbdeb44acc41e6710ea725c\n",
+      "  Stored in directory: /Users/wong/Library/Caches/pip/wheels/85/92/63/e126ee5f33d8f2ed04f96e43ef5df7270a2f331848752e8662\n",
+      "  Building wheel for pyperclip (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25h  Created wheel for pyperclip: filename=pyperclip-1.9.0-py3-none-any.whl size=11003 sha256=16a509fa13cbc6dc632482b1f8045b362a51498d43066b3ad877ddd31917cbdc\n",
+      "  Stored in directory: /Users/wong/Library/Caches/pip/wheels/e8/e7/56/591cb88ba1783b38c40d584026e766aac9c3a048e34128ce8b\n",
+      "  Building wheel for pyrect (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25h  Created wheel for pyrect: filename=PyRect-0.2.0-py2.py3-none-any.whl size=11181 sha256=e08c7248bb478a104f77af9066e76da166b1f80619ef037b9d7b31c253ce1f94\n",
+      "  Stored in directory: /Users/wong/Library/Caches/pip/wheels/c4/e9/fc/b7a666dd4f9a3168fb44d643079b41d36ddab52f470707e820\n",
+      "Successfully built pyautogui wikipedia pygetwindow pyscreeze pytweening mouseinfo pymsgbox pyperclip pyrect\n",
+      "Installing collected packages: pytweening, pyrect, pyperclip, pymsgbox, rubicon-objc, pyscreeze, pyobjc-core, pygetwindow, wikipedia, pyobjc-framework-Cocoa, mouseinfo, pyobjc-framework-quartz, pyautogui, pywhatkit\n",
+      "  Attempting uninstall: pyobjc-core\n",
+      "    Found existing installation: pyobjc-core 10.1\n",
+      "    Uninstalling pyobjc-core-10.1:\n",
+      "      Successfully uninstalled pyobjc-core-10.1\n",
+      "  Attempting uninstall: pyobjc-framework-Cocoa\n",
+      "    Found existing installation: pyobjc-framework-Cocoa 10.1\n",
+      "    Uninstalling pyobjc-framework-Cocoa-10.1:\n",
+      "      Successfully uninstalled pyobjc-framework-Cocoa-10.1\n",
+      "Successfully installed mouseinfo-0.1.3 pyautogui-0.9.54 pygetwindow-0.0.9 pymsgbox-1.0.9 pyobjc-core-10.3.2 pyobjc-framework-Cocoa-10.3.2 pyobjc-framework-quartz-10.3.2 pyperclip-1.9.0 pyrect-0.2.0 pyscreeze-1.0.1 pytweening-1.2.0 pywhatkit-5.4 rubicon-objc-0.4.9 wikipedia-1.4.0\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install pywhatkit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pywhatkit as kit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Mobile Number</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>TRIVEDI PRAKHAR NILESH</td>\n",
+       "      <td>88097455</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>GOH EE SHAWN</td>\n",
+       "      <td>88327694</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>KOW JIA YANG NICHOLAS</td>\n",
+       "      <td>98997799</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ROMA AARON RUSSELL HALLARTE</td>\n",
+       "      <td>91875374</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ZARA TEO</td>\n",
+       "      <td>96254865</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                          Name Mobile Number\n",
+       "0       TRIVEDI PRAKHAR NILESH      88097455\n",
+       "1                 GOH EE SHAWN      88327694\n",
+       "2        KOW JIA YANG NICHOLAS      98997799\n",
+       "3  ROMA AARON RUSSELL HALLARTE      91875374\n",
+       "4                     ZARA TEO      96254865"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tshirt=pd.read_excel('tshirt.xlsx')\n",
+    "tshirt.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "phone_number = \"+6582507711\"\n",
+    "message = f'''\n",
+    "Hiii, this is Wen Bing from NYP AI. \n",
+    "Can I request that you make the payment for the NYP AI T-Shirt as soon as possible? Below are the details: \n",
+    "\n",
+    "*Amount*: $13.80\n",
+    "*PayNow to*: Wong Wen Bing (*88336634*)\n",
+    "'''\n",
+    "\n",
+    "phone=list(tshirt['Mobile Number'])\n",
+    "countrycode='+65'\n",
+    "for i in range(1): \n",
+    "    phone_number=countrycode+str(phone[i])\n",
+    "    kit.sendwhatmsg_instantly(phone_number, message)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -337,7 +590,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.0"
   },
   "orig_nbformat": 4
  },
