--- a/Topic Modelling and Sentiment Analysis/Test 2 Revision/P7B Summary.ipynb
+++ b/Topic Modelling and Sentiment Analysis/Test 2 Revision/P7B Summary.ipynb
@@ -95,14 +95,110 @@
     "- the results and topics are often difficult to identify a category and may not be meaningful\n",
     "- how do you determine suitable number to use?\n",
     "  - use perplexity value (statistical measure of how well probability model predicts sample. benefit comes when comparing different LDA models and model with lower perplexity value is considered better\n",
-    "- **increasing topic_num** to a large # MAY NOT HELP in understanding categories (unless prior knoweledge of possible large value), thus sacrificing clarity\n",
-    "- "
+    "- **increasing topic_num** to a large # **MAY NOT HELP** in understanding categories (unless prior knoweledge of possible large value), thus sacrificing clarity\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0d7173b5-8245-4353-8ea8-5841c1d04672",
+   "metadata": {},
+   "source": [
+    "*After Modelling Observations*  \n",
+    "- some words are appearing in list of topics (like said, mr) --> can be considered as stopwords and generic stopwords cannot handle domain specific words\n",
+    "```Python\n",
+    "#addon to stop words\n",
+    "domain_stop = [\"said\", \"mr\"]\n",
+    "stop.update(domain_stop)\n",
+    "#add stemming to pre-processing step. Stemming is done after lemmatization\n",
+    "from nltk.stem import PorterStemmer\n",
+    "stemmer = PorterStemmer()\n",
+    "stemmed = ' '.join(stemmer.stem(word) for word in normalized.split())\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "603ead07-064e-45e4-ac72-b227769c0659",
+   "metadata": {},
+   "source": [
+    "**Retrieving topic details** \n",
+    "- Part 1: find out file name and corresponding topic ids with probability. Given that LDA is probability in modelling mixture of topics on given content, LDA assign topic ids with probability to indicate content can potentially has more than topic\n",
+    "```Python\n",
+    "print('\\nFile name and its corresponding topic id with probability:')\n",
+    "dic_topic_doc = {}\n",
+    "for index, doc in enumerate(doc_clean):\n",
+    "    #for doc in doc_clean:\n",
+    "    bow = dictionary.doc2bow(doc)\n",
+    "    \n",
+    "    #get topic distribution of the ldamodel\n",
+    "    t = ldamodel.get_document_topics(bow)\n",
+    "    \n",
+    "    #sort the probability value in descending order to extract the top contributing topic id\n",
+    "    sorted_t = sorted(t, key=lambda x: x[1], reverse=True)\n",
+    "    \n",
+    "    #print only the filename \n",
+    "    print(filenames[index],sorted_t)\n",
+    "    \n",
+    "    #get the top scoring item\n",
+    "    top_item = sorted_t.pop(0)\n",
+    "    \n",
+    "    #create dictionary and keep key as topic id and filename and probability in tuple as value\n",
+    "    dic_topic_doc.setdefault(top_item[0],[]).append((filenames[index],top_item[1]))\n",
+    "```\n",
+    "\n",
+    "Part 2: Making use of the above information, and transform to extract list of topic id, number of files (belong to topic) and list of file names with probability \n",
+    "```Python\n",
+    "#print out identified topic id and associated\n",
+    "print('\\nTopic id, number of documents, list of documents with probability and represented topic words:')\n",
+    "\n",
+    "for key,value in dic_topic_doc.items():\n",
+    "    sorted_value = sorted(value, key=lambda x: x[1], reverse=True)\n",
+    "    print(key,len(value),sorted_value)\n",
+    "    #print the topic word and most represented doc\n",
+    "    print(ldamodel.print_topic(key,word_num))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8f9d649f-7abe-455c-9b13-979fc6245765",
+   "metadata": {},
+   "source": [
+    "The interpretation of the result, based on the below output:\n",
+    "\n",
+    "0 13 [('206.txt', 0.99757373), ('112.txt', 0.99581325), ('221 .txt', 0.99573374) … <br />\n",
+    "0.005*\"said\" + 0.005*\"network\" + 0.005*\"business\" + 0.004*\"uk\" + 0.004*\"could\"<br />\n",
+    "1 28 [('111.txt', 0.9982385), ('245.txt', 0.9976861), ('127.txt', 0.9975066),….<br />\n",
+    "0.007*\"people\" + 0.007*\"would\" + 0.006*\"said\" + 0.005*\"blair\" + 0.005*\"party\"\n",
+    "\n",
+    "means that topic id 0 has 13 files identified and 206.txt is assigned with the highest probability, followed by 112.txt and so on. Python starts its index with 0 but essentially, topic id 0 is the first topic identified.\n",
+    "\n",
+    "Similarly, the next is topic id 1 with 28 files identified and 111.txt is assigned with the highest probability, followed by 245.txt and so on.\n",
+    "\n",
+    "\n",
+    "**Visualize Topics and Keywords**\n",
+    "\n",
+    "Now, we are ready to visualize our LDA model.\n",
+    "\n",
+    "The following code uses the pyLDAvis tool to visualize the fit of your LDA model across topics and their top words.\n",
+    "> pip install pyLDAvis\n",
+    "```Python\n",
+    "# plotting tools\n",
+    "import pyLDAvis\n",
+    "import pyLDAvis.gensim_models\n",
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline\n",
+    "\n",
+    "# visualize the topics and keywords\n",
+    "pyLDAvis.enable_notebook()\n",
+    "vis = pyLDAvis.gensim_models.prepare(ldamodel, doc_term_matrix, dictionary)\n",
+    "vis\n",
+    "```"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea06f8b6-8e60-4da9-9646-8b540d6e92dc",
+   "id": "0d69b391-9902-4234-9772-182b6f93ce19",
    "metadata": {},
    "outputs": [],
    "source": []
